--- a/rps.css
+++ b/rps.css
@@ -2,7 +2,9 @@ body {
     background-color: rgb(25,25,25);
     color: rgb(255, 255, 255);
     font-family: Arial;
-    text-align: center;
+    display: flex;           /* enable flex layout */
+    justify-content: center; /* horizontal centering */
+    align-items: center;     /* vertical centering */
 }
 
 .title {
