--- a/rps.css
+++ b/rps.css
@@ -2,9 +2,7 @@ body {
     background-color: rgb(25,25,25);
     color: rgb(255, 255, 255);
     font-family: Arial;
-    display: flex;           /* enable flex layout */
-    justify-content: center; /* horizontal centering */
-    align-items: center;     /* vertical centering */
+    text-align: center;    
 }
 
 .title {
